博客文章分类

--- a/source/_posts/《永远的三丁目的夕阳》观后感.md
+++ b/source/_posts/《永远的三丁目的夕阳》观后感.md
@@ -2,10 +2,11 @@ title: 《永远的三丁目的夕阳》观后感
 date: 2018-09-03 22:34:07
 categories: 
 - 影评
-
 ---
 
 我想如果不是朋友的推荐，我不大可能会主动接触这部影片。其中一个比较直接原因在于影片的名称挺不起眼的，再者这类题材的电影已经不再是我的首选了。在第一次听到影名的时候感到有点困惑：三丁目是什么意思？为什么是永远的三丁目的夕阳？这里先回答第一个问题：丁目是日语词汇，类似汉语中胡同的意思，日本的地址通常是：区-丁目-番-号组成。因此，片名翻译过来就是：永远的第三胡同的夕阳。接下来是我对于第二个问题的答案。
+
+<!-- more -->
 
 ##### 故事背景
 
