--- a/source/_posts/什么是爱.md
+++ b/source/_posts/什么是爱.md
@@ -1,9 +1,7 @@
 title:  关于爱的一点想法
 date: 2017-01-08 17:58:07
-tags: 
-- 爱
 categories: 
-- 闲言碎语
+- 随想
 keywords: 爱
 decription: 爱是什么？
 
@@ -12,6 +10,8 @@ decription: 爱是什么？
 ### 前言
 
 前不久又翻读了《少有人走得路》这本书，并将其置于枕边，每天晚上睡觉之前或是蹲马桶的时候看上几个章节，那种感觉妙不可言。这本书从来没有让我失望过，每看一次都收获不少，确实是一本值得读一辈子的好书。
+
+<!-- more -->
 
 ### 爱的定义
 
