--- a/source/_posts/副词能否修辞名词.md
+++ b/source/_posts/副词能否修辞名词.md
@@ -3,13 +3,15 @@ date: 2016-09-24 23:10:07
 tags:
 - 英语
 categories:
-- 闲言碎语
+- 英语
 keywords: 副词
 decription: 总结副词修辞名词的几种情况
 
 ---
 
 > 之前知乎上看到一提问，大意是：The Lamb Astray中的Astray是形容词还是副词？副词是否能修辞名词？最近恰好在旋元佑先生的《文法俱乐部》一书中找到了合理的解释，借此机会梳理一下这个知识点。
+
+<!-- more -->
 
 结合上述问题：The Lamb Astray中的Astray是形容词还是副词？副词是否能修辞名词？，可以从两个方面进行解答：
 
