--- a/source/_posts/经济学的基础：稀缺.md
+++ b/source/_posts/经济学的基础：稀缺.md
@@ -1,7 +1,9 @@
 title: 经济学的基础：稀缺
 date: 2018-07-25 22:28:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
@@ -10,6 +12,8 @@ categories:
 稀缺是人类一直面对的问题，也是客观存在的事实。稀缺的含义非常之广，不仅指矿产、森林和能源等有形资产的匮乏，还有空气、美貌、天资、意志力和时空等无形资产稀少。
 
 此外还有很多不易觉察到的稀缺资源，比如说地理位置的稀缺，如北上广这些一线城市的地理位置是稀缺的。另外信任也是稀缺的，不是可以随便建立起来的。同学之所以重要，是因为同学决定了你将来社交的圈子、工作层次。许多人读书的首要目的就是为了与同学建立信任这一项长期投资。
+
+<!-- more -->
 
 稀缺之所以一直客观存在，主要由两个原因：一是我们想要的东西别人也想要；二是人的需求在不断变化和升级，人的欲望是无止境的。
 
