--- a/source/_posts/还房贷最省钱的理财方法.md
+++ b/source/_posts/还房贷最省钱的理财方法.md
@@ -1,12 +1,15 @@
 title: 还房贷最省钱的理财方法
 date: 2018-08-21 21:39:07
+tag:
+- 经济
 categories:
-- 闲言碎语
-encrypt: false
+- 随想
 
 ---
 
 最近看了紫竹张先生的一篇名为[还贷款最省钱的理财方法](https://mp.weixin.qq.com/s?__biz=MzAxNDczNTk5MQ==&mid=2651730253&idx=1&sn=f0d5cacc1d180fdb3407311affbb89f2&chksm=80745e55b703d7430507e78469a2a3f4639ef30f8b43d3d6574d8328ae4869d6be49ea23088b&mpshare=1&scene=1&srcid=0820Xnj0x8xfXItvqdGxpfLR&key=fee773bf85a574f5c9b8985f5c4ee09210d769c87a720f5652cfec05e148fbf688c0964752d7765499411b591f4c39829f44009bd07580279982335beb674ad9481f3fa5b1cee2fc8a241c44bde6b8f9&ascene=0&uin=MjM2ODI5NjEyMA%3D%3D)的文章，里面讲述的经济学知识与我们日常生活息息相关，却又是最容易被忽视和误解的部分。在一口气看了两遍感觉收获不小之后，觉得很有必要总结一下，作为备忘。
+
+<!-- more -->
 
 ##### 最省钱的还贷方式
 
