--- a/source/_posts/需求第一定律.md
+++ b/source/_posts/需求第一定律.md
@@ -1,7 +1,9 @@
 title: 需求第一定律
 date: 2018-11-11 09:18:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
@@ -10,6 +12,8 @@ categories:
 > 人总是善于根据代价的高低而灵活应变--对人性深刻而基本的刻画
 
 需求第一定律的定义是：当其他情况不变时，只要价格提高，商品的需求量就会减少；价格降到一定程度，需求量就会增加。
+
+<!-- more -->
 
 **需求曲线**
 
