--- a/source/_posts/需求第三定律.md
+++ b/source/_posts/需求第三定律.md
@@ -1,11 +1,15 @@
 title: 需求第三定律
 date: 2018-11-14 22:37:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 需求第三定律的含义：每当消费者必须支付一笔附近费时，高品质的产品相对低品质的产品就变得便宜了。这笔附加费越高，高品质产品相对就越便宜。因此，这个定律又叫“好东西运到远方去定律”。
+
+<!-- more -->
 
 **附加成本大，精选品才值得**
 
