--- a/source/_posts/需求第二定律.md
+++ b/source/_posts/需求第二定律.md
@@ -1,13 +1,17 @@
 title: 需求第二定律
 date: 2018-11-13 22:13:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 > 理解了需求第二定律，就可以更懂人与人之间互相作用、互相博弈的规律
 
 需求第二定律的定义：需求对价格的弹性，和价格变化之后流逝的时间长度成正比。换言之，随着时间的推移，需求对价格的弹性会增加。
+
+<!-- more -->
 
 **需求对价格的弹性**
 
