--- a/source/_posts/《三体1》读后感之生存还是死亡.md
+++ b/source/_posts/《三体1》读后感之生存还是死亡.md
@@ -1,15 +1,14 @@
-title: 《三体》系列第一部读后感之生存还是死亡？
+title: 《三体1》读后感之死亡还是生存
 date: 2018-12-01 11:33:07
 tags:
 - 三体
 categories:
 - 书评
-photos: 
-- https://img1.doubanio.com/view/subject/l/public/s2768378.jpg
-
 ---
 
 《三体》是我看的第一本科幻小说，与很多在学生时期就接触了这本书的朋友比起来，即将三十而立的我觉得有点相见恨晚。书中涉及了天文学、物理学、计算机学等众多专业知识。在阅读这本书的过程中，总会时不时地感叹作者想象力之丰富，知识之渊博。与作者刘欣慈一样同为程序员的我读起来多了一丝亲切感。过去的自己对科幻小说存在一些误解，认为科幻小说无非只是天马行空的想象罢了，这类超现实的小说只适合用来消遣，并没有太多实用性。现在我为自己愚蠢的想法道歉：一本好的小说一定都蕴含着一个深刻的内核，或是对生命的思考，或是对人性的剖析等等。而小说的功能则是通过虚构一个故事或世界让读者更好的理解作者要表达的想法，并引导读者产生共鸣。《三体》这本书在我看来，它提出的是对人类的究极拷问：生存还是死亡？
+
+<!-- more -->
 
 这本书采用的是倒叙和插叙的叙述方式，让读者在阅读的过程中不断地处于产生疑惑和解答悬念的循环中，也使整个阅读过程都充满紧张和刺激的感觉，直到最后一刻谜底揭开之时不自觉地陷入深思并自我审视：当自己面临同样的困境会如何抉择？是选择生存还是死亡？
 
