--- a/source/_posts/失传的艺术-计算机科学.md
+++ b/source/_posts/失传的艺术-计算机科学.md
@@ -1,13 +1,17 @@
 title: 失传的艺术-计算机科学
 date: 2018-11-03 21:57:07
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 > Don't learn to build doghouses and call yourself an architect. 不要明明是在搭建狗屋，却自称为建筑师。
 
-今天在阮一峰博客看到一篇名为[Computer science as a lost art](http://rubyhacker.com/blog2/20150917.html)的英文博客，文章不长，内容也朴实随意，正如作者所言属于即兴发挥。文章阐述的观点让我自感惭愧，也让我意识到自己与真正的计算机从业者之间的差距，遂翻译以自勉。译文如下：
+今天在阮一峰博客看到一篇名为[Computer science as a lost art](http://rubyhacker.com/blog2/20150917.html)的英文博客，文章不长，内容也朴实随意，正如作者所言属于即兴发挥。文章阐述的观点让我自感惭愧，也让我意识到自己与真正的计算机从业者之间的差距，遂翻译以自勉。
+
+<!-- more -->
+
+译文如下：
 
 昨晚我的一位老友问我：“计算机科学是否已经成为了一门失传的艺术？”今早，我给出了即兴想到的答案：
 
