--- a/source/_posts/科斯定律-从社会成本看问题.md
+++ b/source/_posts/科斯定律-从社会成本看问题.md
@@ -1,13 +1,17 @@
 title: 科斯定律-从社会成本看问题
 date: 2018-08-16 22:53:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 最近了解到一个很棒的经济学概念：社会成本问题。这是之前从未接触到的概念，给了我一个全新的思考问题的角度，心中多少有点欣喜。奈何这个概念有点深奥难懂，所以试着写出自己的理解以加深理解。
 
 社会成本问题在经济学中有着非常重要的政策含义。只有理解了社会成本问题，才能顺应社会和市场的基本运行规律，制定出因势利导的经济政策。
+
+<!-- more -->
 
 最早把社会问题成本讲清楚的是罗纳德·斯科。人们一直信奉的用来解决纷争的金科玉律是：“权利的刑事应以不伤害别人的权利为界”。而斯科认为所有的伤害都是相互的，对于纷争的双方，谁避免意外的成本最低，谁的责任就最大。在面对具体的案例时，人们容易不自觉地掺入个人的情感和主观判断，而只有斯科看到了纠纷背后与资源争夺相关的、客观的经济本质。
 
