--- a/source/_posts/经济学中的成本.md
+++ b/source/_posts/经济学中的成本.md
@@ -1,13 +1,17 @@
 title: 经济学中的成本
 date: 2018-08-02 22:48:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 最近在《薛兆丰经济学讲义》一书中看了“成本”这一概念在经济学中的定义，这与我过去的理解截然不同。
 
 书中专门有一章是讲成本的概念，可见成长在经济学中占有非常重要的地位。书中说如果我们对成本的概念有了深刻的理解，就可以说对经济学了解了一半。
+
+<!-- more -->
 
 我以前对于成本的理解是做某件事情需要付出的代价，包括物质、金钱和劳动力等。然而，书中对成本的定义是：成本是放弃了的最大代价。换言之，如果做一件事情没什么可放弃的，也就不存在成本。比如，如果你选择做事情A的，那么就不能做事情B、C、D、E...。那么你做事情A的成本就是你所放弃的其他选项中价值最高的那个。
 
