--- a/source/_posts/经济学概念-租.md
+++ b/source/_posts/经济学概念-租.md
@@ -1,13 +1,17 @@
 title: 经济学概念-租
 date: 2018-08-11 23:25:07
+tags:
+- 经济
 categories:
-- 闲言碎语
+- 随想
 
 ---
 
 最近在《姚兆丰经济学讲义》看到一个“租”的概念。从经济学的角度进行了重新定义，看完之后云里雾里、似懂非懂，于是做点笔记以加深理解。
 
 有一种资产，不以收费的变化而变化，这种资产带来的收入就是租。租就是相对资产的付费，这里说的资产是广义上的，包括土地、矿产、才能以及特权，只要能够带来收入的就是资产，而对资产付费就是租。
+
+<!-- more -->
 
 每个人都享受一定程度的租。比如我们在平时上班时抽出半个小时刷朋友圈，老板并不会因此开除你或少付工资，这样你就赚了半小时的租。而且这一部分的租是属于旱涝保收的。然而现实生活中，随着时间和竞争条件的变化，真正让你旱涝保收的租是绝对不存在而是相对的存在的。
 
