--- a/source/_posts/英语发音规则总结.md
+++ b/source/_posts/英语发音规则总结.md
@@ -1,5 +1,7 @@
 title: 英语发音规则总结
 date: 2018-07-24 23:05:07
+tags:
+- 英语
 categories:
 - 英语
 
@@ -10,6 +12,8 @@ categories:
 最近在学习ESLPod的“Introducation to the United States”系列，在跟读的时候感觉挺吃力，一方面是因为对音标熟练程度不够，另一方面就是对英语发音规则缺乏认知。秉着主动学习的态度，通过在网路上查阅资料，对英语发音规则有如下总结。
 
 *英语发音规则的建立在对音标熟练且准确掌握的基础之上！*
+
+<!-- more -->
 
 英语发音规则除了连读还包括浊化、爆破、同化、异化、缩读和略读等。大致包括七大技巧，它们分别是：
 
