--- a/source/_posts/《如何阅读一本书》读书笔记.md
+++ b/source/_posts/《如何阅读一本书》读书笔记.md
@@ -9,6 +9,8 @@ categories:
 
 如何阅读一本书？这是一个一直困扰我的难题。几年前有幸拜读了莫提莫·J·艾德勒和查尔斯·范多伦写的《如何阅读一本书》。但是这本书本身的阅读难度不小，所以阅读过程感觉如鲠在喉一般的难受，看完之后仍然对书中提及的阅读方法论一知半解。今天在网路上看到了一份关于阅读方法的PPT文案，里面提及的方法恰好是对这本书的概括与总结。下面内容是我对这篇文稿的摘要与理解。
 
+<!-- more -->
+
 #### 阅读是分类型的
 
 | 阅读类型 | 典型案例 | 对作者要求 | 阅读目的 |
