--- a/source/_posts/计算机中几个与时间相关的概念.md
+++ b/source/_posts/计算机中几个与时间相关的概念.md
@@ -4,7 +4,7 @@ tags:
 - UTC
 categories:
 - 编程
-- 内功
+- WebRTC
 keywords:
 - UTC
 - NTP
@@ -137,17 +137,15 @@ keywords:
     
     网络时间协议（Network Time Protocol ，NTP），是一种用于同步同一网络下不同计算机系统的时钟的网络协议，采用分组交换的方式实现。NTP采用Marzullo算法来选择准确的时间服务器，旨在将同一网络下所有的计算机的UTC时间同步到几毫米的误差内。比如，NTP可以将互联网内的时间误差维持下几十毫秒以下，局域网内的时间误差维持下1毫秒左右。但是，不对称路由和拥塞控制可能导致超过100毫秒的误差。
     
-    NTP使用的时间基准点是：1900年1月1日0点0分0秒（UTC）。
+    NTP的时间基准点是：1900年1月1日0点0分0秒（UTC）。
     
-    NTP时间戳
-    
-    NTP采样64bit的时间戳，包括两个秒和秒的小数两个部分，各占32位：
+    NTP的格式如下所示，共64 bits，包括两个秒和小数秒两个部分，各32 bits：
     
     ```cpp
     // NTPTime
     struct NTPTime {
-    	uint32_t seconds;  // 秒，32位
-    	uint32_t fractions; // 小数秒，32位
+    	uint32_t seconds;  // 秒，32 bits
+    	uint32_t fractions; // 小数秒，32 bits
     }
     // NTP中秒和小数秒的转换关系：1秒 = 2^32小数秒
     constexpr uint64_t kFractionsPerSecond = 0x100000000; // 2^32
